# client-onboarding-rag-assistant

./: app.py  pyproject.toml
data/: employee_data.py  employee_data_generator.py
